--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     top: 0;
     z-index: 2;
     width: 100%;
-    font-size: 1.1rem;
+    font-size: 17px;
 }
 
 nav {
@@ -31,51 +31,22 @@ nav {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 20px;
 }
 
-.nav-links a {
+.nav-link a {
     text-decoration: none;
     color: #333;
     font-weight: 500;
     margin: 0 25px;
-    
-}
-
-.nav-links a:hover {
-    color: #0077cc;
     text-align: center;
-    
 }
 
-.active {
-    border-bottom: 2px solid #0077cc;
-    padding-bottom: 10px;
-}
-.nav-link {
-    position: relative;
-}
-.nav-link:hover::after {
-    content: "";
-    border-bottom: 2px solid #0077cc;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    animation: slide linear 0.3s forwards;
-}
 
-@keyframes slide{
-    from {
-        width: 0;
-    }
-    to {
-        width: 100%;
-    }
-}
 
 @media (max-width: 740px) {
     .nav-links a {
         margin-left: 10px;
+        margin-right: 10px;
         gap: 0;
     }
     .header {
@@ -89,7 +60,7 @@ nav {
         margin-left: 20px;
     }
     .header {
-        padding: 20px 20px;
+        padding: 20px 10%;
     }
 
 }
