--- a/components/HomePage/HomePage.css
+++ b/components/HomePage/HomePage.css
@@ -107,16 +107,17 @@
     font-size: 24px;
 }
 
-.home-page-project-img {
+/* .home-page-project-img {
     border-radius: 20px;
     margin-right: 20px;
-}
+} */
 
 .home-page-project-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: inherit;
+    flex: 1;
 }
 
 .home-page-project-list {
@@ -159,6 +160,8 @@
 .time-container {
     min-width: 100px;
     margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .home-page-project-tech {
@@ -169,7 +172,14 @@
     list-style: none;
     padding-left: 10px;
 }
-
+.img-container {
+    width: 30%;
+    margin-right: 20px;
+}
+.home-page-project-img {
+    width: 100%;
+    border-radius: 20px;
+}
 .home-page-project-tech-img {
     width: 32px;
 }
@@ -192,9 +202,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.contact-logo-item {
-
 }
 .contact-logo-icon {
     width: 48px;
@@ -223,7 +230,9 @@
         padding: 0;
         text-align: center;
     }
-
+    .img-container {
+        width: 100%;
+    }
     .home-page-project-item {
         flex-direction: column;
     }
@@ -263,5 +272,8 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3;
+    }
+    .home-page-project-item {
+        align-items: center;
     }
 }
