--- a/components/ProjectPage/Project.css
+++ b/components/ProjectPage/Project.css
@@ -1,6 +1,7 @@
 .project {
     width: 100%;
 }
+
 .page-title {
     font-size: 36px;
     font-weight: bold;
@@ -17,9 +18,11 @@
     background-size: contain;
     height: 500px;
 }
+
 .category-containe {
     width: 100%;
 }
+
 .category {
     width: 100%;
     display: flex;
@@ -53,6 +56,121 @@
     font-size: 20px;
 }
 
+.github-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.btn-github {
+    text-align: center;
+    padding: 15px 25px;
+    background-color: #0077cc;
+    color: white;
+    cursor: pointer;
+    font-size: 0.8rem;
+    border-radius: 10px;
+}
+
+.btn-github a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.section-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
 @media (max-width: 740px) {
     .project-placeholder {
         height: 200px;
@@ -62,6 +180,11 @@
         font-weight: bold;
         font-size: 16px;
         margin: 0;
+    }
+    .prev,
+    .next,
+    .text {
+        font-size: 11px
     }
 }
 
