--- a/style.css
+++ b/style.css
@@ -190,3 +190,169 @@
         margin-top: 3rem;
     }
 }
+
+@layer nav {
+    header {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+    header h1 {
+        font-size: var(--h3);
+        font-weight: 300;;
+        margin: 0;
+    }
+    header h1 a {
+        color: var(--white);
+        text-decoration: none;
+    }
+    header svg {
+        width: 30px;
+        fill: var(--white);
+        margin-top: -0.1rem;
+    }
+    header a:hover svg {
+        fill: var(--green);
+    }
+    nav {
+        font-family: var(--heading);
+        font-weight: 600;
+    }
+    nav .button {
+        padding: 0.6rem 0.4rem 0.4rem 0.4rem;
+        color: var(--black);
+    }
+    h1 {
+        margin: 0;
+    }
+    nav ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        display: flex;
+        flex-flow: row wrap;
+        gap: 2rem;
+    }
+    nav a {
+        text-decoration: none;
+        color: var(--white);
+    }
+    body {
+        background-color: black;
+    }
+    @media (max-width: 830px) {
+        header {
+            justify-content: center;
+        }
+        header h1 {
+            flex-basis: 100%;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+    }
+    @media (max-width: 640px) {
+        header {
+            justify-content: space-between;
+        }
+        header h1 {
+            flex-basis: auto;
+        }
+        header button {
+            display: block;
+            font-size: 3rem;
+            line-height: 1;
+            border: 0;
+            background-color: transparent;
+            color: var(--white);
+        }
+        header button:hover {
+            color: var(--green);
+        }
+        header button::after {
+            content: "\2630";
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            right: 200%;
+            width: 100vw;
+            height: 100vh;
+            background: #fff;
+            padding-top: 20%;
+            transition: right 0s 0.5s opacity 0.5s;
+        }
+        button:focus + nav,
+        button:focus-within + nav {
+            right: 0;
+            opacity: 1;
+            transition: right 0s, opacity 0.5s;
+        }
+        nav ul {
+            display: block;
+            text-align: center;
+            position: relative;
+            top: -50vh;
+            transition: top 0.5s;
+        }
+        button:focus + nav ul,
+        button:focus-within + nav ul {
+            top: 0;
+        }
+        nav a:any-link:not(.button) {
+            display: block;
+            padding: 1.5rem;
+            color: var(--green);
+        }
+        nav .button {
+            margin-top: 1.5rem;
+            display: inline-block;
+            color: var(--black);
+        }
+        nav ul::after {
+            content: "\2716";
+            color: var(--green);
+            display: block;
+            position: absolute;
+            top: 0.125rem;
+            right: 0.5rem;
+            font-size: 3rem;
+            line-height: 1;
+        }
+        nav a svg {
+            fill: var(--green);
+        }
+        nav a:hover,
+        nav a svg:hover {
+            color: var(--tan);
+            fill: var(--tan);
+        }
+    }
+}
+@layer footer {
+    footer {
+        text-align: center;
+        padding: 6rem 0;
+        background: var(--black) url("https://assets.codepen.io/296057/fem-stars.jpg") no-repeat center center;
+        background-size: cover;
+        color: var(--white);
+    }
+
+    footer ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 2rem 0;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 3rem;
+        font-size: 3rem;
+    }
+    footer svg {
+        width: 40px;
+        fill: var(--white);
+    }
+    footer a:hover svg {
+        fill: var(--green);
+    }
+}
