--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@layer base{
+@layer base {
     :root {
         --black: #000501;
         --white: #fff;
@@ -140,11 +140,13 @@
     .tan {
         background-color: var(--tan);
     }
+
     .container {
         max-width: 1200px;
         margin: 0 auto;
         padding: 0 1rem;
     }
+
     .button {
         display: inline-block;
         background-color: var(--green);
@@ -158,6 +160,7 @@
         line-height: 1;
         font-size: var(--small);
     }
+
     .button:hover {
         background-color: var(--tan);
     }
@@ -171,9 +174,11 @@
         color: var(--white);
         padding: 4rem 0;
     }
+
     .intro a {
         color: var(--white);
     }
+
     .name {
         font-weight: bold;
     }
@@ -186,6 +191,7 @@
         background: var(--black) url("https://assets.codepen.io/296057/fem-aurora.jpg") center center;
         color: var(--white);
     }
+
     .section-contact p:last-child {
         margin-top: 3rem;
     }
@@ -198,34 +204,43 @@
         justify-content: space-between;
         align-items: baseline;
     }
+
     header h1 {
         font-size: var(--h3);
-        font-weight: 300;;
+        font-weight: 300;
+        ;
         margin: 0;
     }
+
     header h1 a {
         color: var(--white);
         text-decoration: none;
     }
+
     header svg {
         width: 30px;
         fill: var(--white);
         margin-top: -0.1rem;
     }
+
     header a:hover svg {
         fill: var(--green);
     }
+
     nav {
         font-family: var(--heading);
         font-weight: 600;
     }
+
     nav .button {
         padding: 0.6rem 0.4rem 0.4rem 0.4rem;
         color: var(--black);
     }
+
     h1 {
         margin: 0;
     }
+
     nav ul {
         margin: 0;
         padding: 0;
@@ -234,30 +249,37 @@
         flex-flow: row wrap;
         gap: 2rem;
     }
+
     nav a {
         text-decoration: none;
         color: var(--white);
     }
+
     body {
         background-color: black;
     }
+
     @media (max-width: 830px) {
         header {
             justify-content: center;
         }
+
         header h1 {
             flex-basis: 100%;
             text-align: center;
             margin-bottom: 2rem;
         }
     }
+
     @media (max-width: 640px) {
         header {
             justify-content: space-between;
         }
+
         header h1 {
             flex-basis: auto;
         }
+
         header button {
             display: block;
             font-size: 3rem;
@@ -266,12 +288,15 @@
             background-color: transparent;
             color: var(--white);
         }
+
         header button:hover {
             color: var(--green);
         }
+
         header button::after {
             content: "\2630";
         }
+
         nav {
             position: fixed;
             top: 0;
@@ -282,12 +307,14 @@
             padding-top: 20%;
             transition: right 0s 0.5s opacity 0.5s;
         }
-        button:focus + nav,
-        button:focus-within + nav {
+
+        button:focus+nav,
+        button:focus-within+nav {
             right: 0;
             opacity: 1;
             transition: right 0s, opacity 0.5s;
         }
+
         nav ul {
             display: block;
             text-align: center;
@@ -295,20 +322,24 @@
             top: -50vh;
             transition: top 0.5s;
         }
-        button:focus + nav ul,
-        button:focus-within + nav ul {
+
+        button:focus+nav ul,
+        button:focus-within+nav ul {
             top: 0;
         }
+
         nav a:any-link:not(.button) {
             display: block;
             padding: 1.5rem;
             color: var(--green);
         }
+
         nav .button {
             margin-top: 1.5rem;
             display: inline-block;
             color: var(--black);
         }
+
         nav ul::after {
             content: "\2716";
             color: var(--green);
@@ -319,9 +350,11 @@
             font-size: 3rem;
             line-height: 1;
         }
+
         nav a svg {
             fill: var(--green);
         }
+
         nav a:hover,
         nav a svg:hover {
             color: var(--tan);
@@ -329,6 +362,7 @@
         }
     }
 }
+
 @layer footer {
     footer {
         text-align: center;
@@ -348,11 +382,197 @@
         gap: 3rem;
         font-size: 3rem;
     }
+
     footer svg {
         width: 40px;
         fill: var(--white);
     }
+
     footer a:hover svg {
         fill: var(--green);
+    }
+}
+
+@layer project {
+    .section-projects {
+        background-color: var(--black);
+        padding: 6rem 0 4rem 0;
+        color: var(--white);
+    }
+
+    figure {
+        display: grid;
+        grid-template-rows: 1fr 100px;
+    }
+
+    figure img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    figure a {
+        color: var(--white);
+        text-decoration: none;
+        grid-row: 1/3;
+        grid-column: 1/2;
+    }
+
+    figure a:hover {
+        color: var(--green);
+    }
+
+    figcaption {
+        background-color: var(--black);
+        opacity: 0.8;
+        text-align: center;
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+
+    figcaption h3 {
+        margin-bottom: 0;
+    }
+
+    figcaption ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0 0 2rem 0;
+        font-family: var(--mono);
+        text-transform: uppercase;
+        font-size: var(--small);
+    }
+
+    figcaption li {
+        display: inline-block;
+    }
+    .topgrid {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 2rem;
+    }
+    .topgrid figure:first-child {
+        grid-row: span 2;
+    }
+    .topgrid h3 {
+        margin-bottom: 0;
+        font-size: var(--h5);
+    }
+    .bottomgrid {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 2rem;
+        margin: 2rem 0;
+    }
+    @media (max-width: 992px) {
+        .topgrid {
+            display: block;
+        }
+        .topgrid figure {
+            margin-bottom: 4rem;
+        }
+        .bottomgrid {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+            align-content: center;
+            gap: 6rem 2rem;
+        }
+        .bottomgrid > * {
+            flex-basis: 30%;
+        }
+        .bottomgrid img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+        @media (max-width: 667px) {
+            .bottomgrid {
+                gap: 2rem;
+            }
+            .bottomgrid a {
+                flex-basis: 80%;
+            }
+            .topgrid figure {
+                margin-bottom: 2rem;
+            }
+            .section-projects h2 {
+                font-size: var(--h5);
+            }
+            figcaption h3 {
+                font-size: var(--base-size);
+            }
+        }
+    }
+}
+
+@layer featured {
+    .section-featured {
+        background-image: url("https://assets.codepen.io/296057/fem-feature-bkgd.png");
+        background-repeat: repeat;
+        background-position: center center;
+        padding: 6rem 0;
+    }
+    .section-featured h2 {
+        font-size: var(--h3);
+    }
+    .section-featured h3 {
+        margin: 3rem 0 0 0;
+        padding: 1rem 1rem 0 1rem;
+        color: var(--white);
+        font-size: var(--h4);
+        background-color: var(--black);
+    }
+    .blackbox {
+        padding: 0rem 1rem 1rem 1rem;
+        color: white;
+        background-color: var(--black);
+        border-radius: 0;
+    }
+    .section-featured article {
+        display: grid;
+        grid-template-rows: auto;
+    }
+    .section-featured img {
+        grid-row: 1/2;
+        grid-column: 1/2;
+        display: block;
+        margin-top: 2rem;
+    }
+    .section-featured ul {
+        list-style-type: none;
+        padding: 0;margin: 0;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 1rem;
+        font-family: var(--mono);
+        text-transform: uppercase;
+        font-size: var(--small);
+        grid-row: 2/3;
+        margin-top: -1.75rem;
+    }
+    .section-featured li {
+        background-color: var(--white);
+        padding: 0.5rem;
+        border: 2px solid var(--red);
+    }
+    @media (max-width: 475px) {
+        .section-featured h2 {
+            font-size: var(--h4);
+        }
+    }
+    @media (max-width: 400px) {
+        .section-featured h2 {
+            font-size: var(--h5);
+        }
+        .section-featured h3 {
+            font-size: var(--h5);
+        }
+        .section-featured ul {
+            background-color: var(--white);
+            padding: 0.5rem;
+            border: 2px solid var(--red);
+        }
     }
 }
